CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(test)

INCLUDE_DIRECTORIES("/usr/include/mysql")

AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/src test_src)

LINK_DIRECTORIES("/usr/lib64/mysql/")

ADD_EXECUTABLE(${PROJECT_NAME} ${test_src})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} mysqlclient)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} wsCore)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} wsDatabase)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} wsNetwork)
