CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(wsNetwork)

if (MSVC)
INCLUDE_DIRECTORIES("${CMAKE_SOURCE_DIR}/3rd/curl/include")
endif (MSVC)

AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/src wsNetwork_src)
ADD_LIBRARY(${PROJECT_NAME} ${wsNetwork_src})

if (CMAKE_COMPILER_IS_GNUCXX)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} curl)
endif(CMAKE_COMPILER_IS_GNUCXX)
